--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "mojave-vscode-theme",
-	"displayName": "Lukin Theme",
+	"displayName": "Mojave Theme",
 	"description": "A minimal, ultra-dark and vibrant theme for VS Code.",
 	"version": "0.0.1",
 	"publisher": "evertonandrade",
